# adaptation.ap_samsung.xserver-xorg-video-exynos

./: .gitignore  ChangeLog  Makefile.am  configure.ac  dconfigurator.sh  template.spec
packaging/: xorg-x11-drv-exynos.spec
src/: Makefile.am  exynos.c  exynos.h  sec.c  sec.h
src/accel/: exynos_accel.h  exynos_dri2.c  exynos_dri3.c  exynos_exa.c  exynos_exa_sw.c  exynos_present.c  sec_accel.h  sec_dri2.c  sec_dri3.c  sec_exa.c  sec_exa_g2d.c  sec_exa_sw.c  sec_present.c
src/crtcconfig/: exynos_crtc.c  exynos_crtc.h  exynos_display.c  exynos_display.h  exynos_dummy.c  exynos_dummy.h  exynos_layer.c  exynos_layer.h  exynos_layer_manager.c  exynos_layer_manager.h  exynos_output.c  exynos_output.h  exynos_plane.c  exynos_plane.h  exynos_prop.c  exynos_prop.h  exynos_xberc.c  exynos_xberc.h  sec_crtc.c  sec_display.c  sec_display.h  sec_layer.c  sec_layer.h  sec_layer_manager.c  sec_layer_manager.h  sec_output.c  sec_plane.c  sec_plane.h  sec_prop.c  sec_xberc.c
src/debug/: exynos_drmmode_dump.c  exynos_drmmode_dump.h
src/g2d/: fimg2d.c  fimg2d.h  fimg2d_reg.h  util_g2d.c
src/hwa/: exynos_hwa.c  exynos_hwa.h  sec_hwa.c  sec_hwa.h
src/hwc/: exynos_hwc.c  exynos_hwc.h  sec_hwc.c  sec_hwc.h
src/ipp/: exynos_converter.c  exynos_converter.h  exynos_drm_ipp.c  exynos_drm_ipp.h  exynos_wb.c  exynos_wb.h  sec_converter.c  sec_converter.h  sec_wb.c
src/memory/: exynos_memory_flush.c  exynos_memory_flush.h
src/neon/: copy_area.c  neonmem.h
src/util/: exynos_util.c  exynos_util.h  sec_util.c  sec_util.h
src/xv/: exynos_video.c  exynos_video.h  exynos_video_clone.c  exynos_video_clone.h  exynos_video_display.c  exynos_video_display.h  exynos_video_fourcc.h  exynos_video_tvout.c  exynos_video_tvout.h  exynos_video_types.h  exynos_video_virtual.c  exynos_video_virtual.h  sec_video.c  sec_video_clone.c  sec_video_display.c  sec_video_types.h  sec_video_virtual.c  xv_types.h
tests/functional/: Makefile.am
tests/functional/hwa_test/: Makefile.am  hwa_sample.c  hwa_sample.h
tests/functional/hwc_test/: Makefile.am  aux_apps.c  aux_apps.h  clock.c  launch.sh  snowflake.c  wander_stripe.c
tests/functional/hwc_test/aux_dri2_dri3_lib/: aux_draw.c  dri2.c  dri2_dri3.c  dri2_dri3.h  dri2_dri3_inner.h  dri3.c  fps.c  fps.h
tests/functional/hwc_test/hwc_sample/: hwc-sample.c  hwc-sample.h  hwc-thread.c  list.h
tests/functional/hwc_test/square_bubbles/: square_bubbles.c
tests/functional/pixmap_copy_test/: Makefile.am  pixmap_copy.c
tests/functional/xv_test/: Makefile.am
